# Posts-Analyzer-API

./: .dockerignore  .env.example  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 52371bbfb15a_initial_migration.py
src/api/: dependencies.py  router.py
src/api/v1/endpoints/: posts.py
src/core/: config.py  database.py  logger.py
src/db/crud/: posts.py
src/db/models/: base.py  posts.py
src/schemas/: posts.py
src/services/: posts_analyzer.py
tests/: .env.test  conftest.py
tests/api/: conftest.py  test_categories.py  test_posts.py
tests/db/: test_crud.py  test_models.py
tests/services/: test_post_analyzer.py
