[project]
name = "task-garant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "ruff>=0.11.5",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.1",
]
