[project]
name = "task-garant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "anyio>=4.9.0",
    "asyncpg==0.28.0",
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "ruff>=0.11.5",
    "sqlalchemy>=2.0.40",
    "testing-postgresql>=1.3.0",
    "uvicorn[standard]>=0.34.1",
]
